# auth-service

./: Dockerfile  PROJECT_TREE.txt  PROJECT_TREE_DDD.txt  README  README.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/auth/gRPC/: auth_server.py  server.py
app/auth/services/: auth_service.py  iauth_service.py
app/auth/utils/: cheks.py  convert.py
app/core/: config.py
app/core/db/: db_hellper.py
app/core/kafka/: kf_helper.py
app/core/security/: password.py  token.py
app/gateway/gRPC/: auth_server.py  server.py
app/gateway/services/: auth_service.py  iauth_service.py
app/gateway/utils/: cheks.py  convert.py
app/kafka/repositories/: kafka_repositories.py
migrations/versions/: 2025_11_12_1414-85f59ce17020_initial_migration.py  2025_11_12_1415-2ca723ecc8c0_user_id.py  2025_11_29_1303-7263d56f6e4c_delete_username_add_login.py
src/application/dtos/: inputs.py  outputs.py
src/application/event_handlers/: kafka_evet_publisher.py
src/application/services/: authenticate_user_service.py  create_user_service.py  current_user_service.py  event_bus.py  refresh_token_service.py  registration_user_service.py
src/application/utils/: convert.py
src/core/: config.py
src/domain/entities/: user.py
src/domain/events/: __init__.py  user_events.py
src/domain/repositories/: iuser_repository.py
src/domain/value_objects/: __init__.py  email.py  password.py  token.py  username.py
src/infrastructure/: db_hellper.py  kf_helper.py
src/infrastructure/events/: kafka_event_bus.py
src/infrastructure/security/: password_service.py  (+1 more)
(+8 files in other folders)
